# realtime_dispatch_system

./: BUILD_GUIDE.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml
android-apps/driver-app/: build.gradle
android-apps/driver-app/src/main/java/com/dispatch/driver/: DriverApplication.kt
dispatch-api/: pom.xml
dispatch-api/src/main/java/com/dispatch/api/: DispatchApiApplication.java
dispatch-api/src/main/java/com/dispatch/api/config/: KafkaConfig.java  SecurityConfig.java
dispatch-api/src/main/java/com/dispatch/api/controller/: DriverController.java  DriverMapper.java  RideController.java  RideMapper.java
dispatch-api/src/main/java/com/dispatch/api/model/: Driver.java  DriverStatus.java  Ride.java  RideStatus.java
dispatch-api/src/main/java/com/dispatch/api/repository/: DriverRepository.java  RideRepository.java
dispatch-api/src/main/java/com/dispatch/api/security/: JwtTokenProvider.java
dispatch-api/src/main/proto/: geoindex.proto
dispatch-api/src/main/resources/: application.yml
geo-index-service/: Cargo.toml  build.rs
geo-index-service/proto/: geoindex.proto
geo-index-service/src/: geo_index.rs  grpc_service.rs  http_server.rs  main.rs  metrics.rs
infrastructure/clickhouse/: init.sql
infrastructure/postgres/: init.sql
monitoring/grafana/dashboards/: system-overview.json
monitoring/grafana/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
scripts/: test-system.sh
stream-processing/: pom.xml  submit-jobs.sh
stream-processing/src/main/java/com/dispatch/streaming/: ETACalculationJob.java
(+25 files in other folders)
