[package]
name = "geo-index-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geo-index-server"
path = "src/main.rs"

[dependencies]
# gRPC and protobuf
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Geospatial calculations
geo = "0.26"
geohash = "0.13"

# Data structures
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "geo_index_bench"
harness = false
